# gvasp

./: .bumpversion.cfg  .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  Dockerfile  E_form_rms.py  Ea_length.py  Ev_displacement.py  MANIFEST.in  O_v.py  Ov_form.py  README.md  UValue.yaml  auto_conda.ps1  auto_conda.sh  bandgap.pl  base.py  chgsplit.pl  config.json  deeplearning.py  dist_max.py  element.yaml  energy_decomposition.py  environment.yml  error.py  figure.py  file.py  homolumo.pl  logger.py  main.py  plot.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  split_dos  struct_pertur.py  structure.py  (+2 more)
.github/: dependabot.yml  release-drafter.yml
Band/: Band_structure.py  band.sh  bandplot.pl
Band_acquire_data/: OUTCAR
CLib/: _dos.pyx  setup.py
Calculator/: lattice.py  surface_energy.py
ChargeDensity/: chgcar.py  chgsplit.pl  chgsum.pl  parchg_format.f90
DOS/: Makefile  Makefile_MACOS  c_doscar_load.cpp  c_doscar_load.h  c_doscar_load.pyx  dos.py  dos1.0.py  dos1.3.0.py  dos1.3.2.py  dos1.4.3.py  dos1.5.4.py  dos1.8.5.py
Dimer/: MODECAR  POSCAR  freq06  freq06.arc  freq6.arc  xyz_arc.sh
Frequency/: VASP.py  arc  freq.sh  freqmov.py  lattice.py  modemake.py  xyz_arc.sh
Lib/: _dos.cp39-win_amd64.pyd  _file.cp39-win_amd64.pyd
MD_summary/: MD_dis.sh  changelog
NEB/: idpp.tgz
PES_plot/: changelog  nebplot.py  plot.py  plot_1.3.4.py
QVasp/: README.md  __init__.py  config.json  main.py
TS_plot/: atom_fix_TS.py  plot.py  plot1.1.3.py  plot_1.0.py
VaspTask/: changelog  check_input.sh  create_POSCAR.pl  (+8 more)
(+364 files in other folders)
